force-app/main/default/objects/Requirement_Sheet__c/Requirement_Sheet__c.object-meta.xml
<CustomObject>
    <description>This would be used in situations that there needs to be a set a questions approved by a third party before an action can take place. Example: sales needs to submit a website audit sheet to agency to sell a client</description>
    <label>Requirement Sheet</label>
    <nameField>
        <label>Requirement Submit Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>