force-app/main/default/objects/Requirement_Sheet__c/fields/About_Us_Video__c.field-meta.xml
<CustomField>
    <fullName>About_Us_Video__c</fullName>
    <inlineHelpText>Client has an “about us” video leveraged in social media and on their website/youtube page</inlineHelpText>
    <label>About Us Video?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>