force-app/main/default/objects/Requirement_Sheet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requirement Sheets</relationshipLabel>
    <relationshipName>Requirement_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>