force-app/main/default/objects/Requirement_Sheet__c/fields/Accounting_Processed__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be checked by accounting once payment has been processed. If checked by any other party payment will not be given and disciplinary steps will be taken.</inlineHelpText>
    <label>Accounting Processed</label>
    <type>Checkbox</type>
</CustomField>