force-app/main/default/objects/Requirement_Sheet__c/fields/Agreed_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Buy__c</fullName>
    <label>Agreed to Buy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>