force-app/main/default/objects/Requirement_Sheet__c/fields/Animation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Animation_Notes__c</fullName>
    <label>Animation Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>