force-app/main/default/objects/Requirement_Sheet__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>&quot;Submitted&quot; will notify Eric of the approval request. If Eric moves Status to Approved or Denied, reps will be notified.

Also used to track Over-Allocated approval process.</description>
    <inlineHelpText>Use &apos;Submitted&apos; to send this for approval.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>