force-app/main/default/objects/Requirement_Sheet__c/fields/Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approver_Notes__c</fullName>
    <label>Approver Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>