force-app/main/default/objects/Requirement_Sheet__c/fields/Are_they_an_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Are_they_an_Influencer__c</fullName>
    <label>Are they an influencer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>