force-app/main/default/objects/Requirement_Sheet__c/fields/Budget_Impacting__c.field-meta.xml
<CustomField>
    <fullName>Budget_Impacting__c</fullName>
    <label>Budget Impacting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>