force-app/main/default/objects/Requirement_Sheet__c/fields/Client_URL__c.field-meta.xml
<CustomField>
    <fullName>Client_URL__c</fullName>
    <label>Client URL</label>
    <type>Url</type>
</CustomField>