force-app/main/default/objects/Requirement_Sheet__c/fields/Closed_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Closed_Contract_Value__c</fullName>
    <label>Closed Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>