force-app/main/default/objects/Requirement_Sheet__c/fields/Compensation_for_Over_Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Compensation_for_Over_Allocated_Hours__c</fullName>
    <formula>IF(AND( Program_Size__c &gt;=1,  ISPICKVAL(Duration_of_Overallocation__c, &quot;Full Month&quot;)),500,
IF(AND(Program_Size__c &lt;1,  ISPICKVAL(Duration_of_Overallocation__c, &quot;Full Month&quot;)),250,
IF(AND(Program_Size__c&gt;=1,ISPICKVAL(Duration_of_Overallocation__c, &quot;Half Month&quot;)),250,
IF(AND(Program_Size__c &lt;1,  ISPICKVAL(Duration_of_Overallocation__c, &quot;Half Month&quot;)),125,
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation for Over-Allocated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>