force-app/main/default/objects/Requirement_Sheet__c/fields/Competitor_1_URL__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_URL__c</fullName>
    <label>Competitor 1 URL:</label>
    <type>Url</type>
</CustomField>