force-app/main/default/objects/Requirement_Sheet__c/fields/Competitor_2_URL__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_URL__c</fullName>
    <label>Competitor 2 URL:</label>
    <type>Url</type>
</CustomField>