force-app/main/default/objects/Requirement_Sheet__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate with contact appointment was set with</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requirement Sheets</relationshipLabel>
    <relationshipName>Requirement_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>