force-app/main/default/objects/Requirement_Sheet__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <inlineHelpText>Client has a CRM and post-sale marketing automation toolkit.</inlineHelpText>
    <label>CRM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>