force-app/main/default/objects/Requirement_Sheet__c/fields/Date_of_Close__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Close__c</fullName>
    <label>Date of Close</label>
    <type>Date</type>
</CustomField>