force-app/main/default/objects/Requirement_Sheet__c/fields/Do_they_have_more_than_40_pages__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_more_than_40_pages__c</fullName>
    <label>Do they have more than 40 pages?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unaware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>