force-app/main/default/objects/Requirement_Sheet__c/fields/Do_they_use_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Do_they_use_Salesforce__c</fullName>
    <label>Do they use Salesforce?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>