force-app/main/default/objects/Requirement_Sheet__c/fields/Does_site_have_animation__c.field-meta.xml
<CustomField>
    <fullName>Does_site_have_animation__c</fullName>
    <label>Does site have animation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unaware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>