force-app/main/default/objects/Requirement_Sheet__c/fields/Does_website_have_a_member_login__c.field-meta.xml
<CustomField>
    <fullName>Does_website_have_a_member_login__c</fullName>
    <label>Does website have a member login?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unaware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>