force-app/main/default/objects/Requirement_Sheet__c/fields/Duration_of_Overallocation__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Overallocation__c</fullName>
    <label>Duration of Overallocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Half Month</fullName>
            </value>
            <value>
                <fullName>Full Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>