force-app/main/default/objects/Requirement_Sheet__c/fields/E_Commerce_Notes__c.field-meta.xml
<CustomField>
    <fullName>E_Commerce_Notes__c</fullName>
    <label>E-Commerce Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>