force-app/main/default/objects/Requirement_Sheet__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Track the period a user has been overallocated.</description>
    <inlineHelpText>Only input the 1st or 15th.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>