force-app/main/default/objects/Requirement_Sheet__c/fields/Established_Social_Platform_Vanity_URL__c.field-meta.xml
<CustomField>
    <fullName>Established_Social_Platform_Vanity_URL__c</fullName>
    <inlineHelpText>Established Social Platforms &amp; Vanity URL&apos;s?</inlineHelpText>
    <label>Established Social Platform &amp; Vanity URL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>