force-app/main/default/objects/Requirement_Sheet__c/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <inlineHelpText>Client has at least 100+ followers to company page per channel.</inlineHelpText>
    <label>Followers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>