force-app/main/default/objects/Requirement_Sheet__c/fields/Google_My_Business__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business__c</fullName>
    <inlineHelpText>Does your business have a live Google My Business listing and is it claimed</inlineHelpText>
    <label>Google My Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>