force-app/main/default/objects/Requirement_Sheet__c/fields/Google_My_Business_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business_Reviews__c</fullName>
    <inlineHelpText>Positive GMB reviews are a part of how Google ranks businesses for local search results.</inlineHelpText>
    <label>Google My Business Reviews</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>