force-app/main/default/objects/Requirement_Sheet__c/fields/Google_PageSpeed_Insights_Desktop_Score__c.field-meta.xml
<CustomField>
    <fullName>Google_PageSpeed_Insights_Desktop_Score__c</fullName>
    <label>Google PageSpeed Insights Desktop Score</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>