force-app/main/default/objects/Requirement_Sheet__c/fields/Growth_Notes__c.field-meta.xml
<CustomField>
    <fullName>Growth_Notes__c</fullName>
    <label>Growth Notes</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>