force-app/main/default/objects/Requirement_Sheet__c/fields/GT_Metrix_Health__c.field-meta.xml
<CustomField>
    <fullName>GT_Metrix_Health__c</fullName>
    <inlineHelpText>Is my site loading correctly, mobile friendly, and have a Metrix site speed score of 85% or higher?</inlineHelpText>
    <label>GT Metrix Health?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>