force-app/main/default/objects/Requirement_Sheet__c/fields/GTMetrix_Pagespeed_Score__c.field-meta.xml
<CustomField>
    <fullName>GTMetrix_Pagespeed_Score__c</fullName>
    <label>GTMetrix Pagespeed Score</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>