force-app/main/default/objects/Requirement_Sheet__c/fields/GTMetrix_YSlow_Score__c.field-meta.xml
<CustomField>
    <fullName>GTMetrix_YSlow_Score__c</fullName>
    <label>GTMetrix YSlow Score</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>