force-app/main/default/objects/Requirement_Sheet__c/fields/How__c.field-meta.xml
<CustomField>
    <fullName>How__c</fullName>
    <label>How do they use their marketing budget?</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>