force-app/main/default/objects/Requirement_Sheet__c/fields/How_do_they_make_money__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_make_money__c</fullName>
    <inlineHelpText>ROI on their product or service? How much does it cost?</inlineHelpText>
    <label>How do they make money?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>