force-app/main/default/objects/Requirement_Sheet__c/fields/How_much_do_they_want_to_grow_by__c.field-meta.xml
<CustomField>
    <fullName>How_much_do_they_want_to_grow_by__c</fullName>
    <label>How much do they want to grow by?</label>
    <type>TextArea</type>
</CustomField>