force-app/main/default/objects/Requirement_Sheet__c/fields/Is_current_website_built_on_Wordpress__c.field-meta.xml
<CustomField>
    <fullName>Is_current_website_built_on_Wordpress__c</fullName>
    <label>Is current website built on Wordpress?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unaware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>