force-app/main/default/objects/Requirement_Sheet__c/fields/Last_Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pitch_Date__c</fullName>
    <formula>Opportunity__r.Most_Recent_Pitch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Pitch Date</label>
    <type>Date</type>
</CustomField>