force-app/main/default/objects/Requirement_Sheet__c/fields/Likelihood_to_buy_in_60_days__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_buy_in_60_days__c</fullName>
    <label>Likelihood to buy in 60 days?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>