force-app/main/default/objects/Requirement_Sheet__c/fields/Marketing_Assets__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets__c</fullName>
    <inlineHelpText>Client has downloadable PDFs and leave-behinds including brochure, case studie(s), infographics, sell sheets.</inlineHelpText>
    <label>Marketing Assets?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>