force-app/main/default/objects/Requirement_Sheet__c/fields/Member_Login_Notes__c.field-meta.xml
<CustomField>
    <fullName>Member_Login_Notes__c</fullName>
    <label>Member Login Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>