force-app/main/default/objects/Requirement_Sheet__c/fields/Mobile_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Keywords__c</fullName>
    <inlineHelpText>How many Mobile keywords does your website rank for? These are crucial for leading traffic to your website.</inlineHelpText>
    <label>Mobile Keywords?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>