force-app/main/default/objects/Requirement_Sheet__c/fields/Number_of_Annual_Appointments_Guaranteed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Annual_Appointments_Guaranteed__c</fullName>
    <inlineHelpText>Specific to &apos;Other&apos; clients</inlineHelpText>
    <label>Number of Annual Appointments Guaranteed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>