force-app/main/default/objects/Requirement_Sheet__c/fields/of_non_branded_Traffic__c.field-meta.xml
<CustomField>
    <fullName>of_non_branded_Traffic__c</fullName>
    <inlineHelpText>How much of the traffic your site gets is coming from non-branded search results?</inlineHelpText>
    <label>% of non-branded Traffic?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>