force-app/main/default/objects/Requirement_Sheet__c/fields/OK_with_competitor_getting_market__c.field-meta.xml
<CustomField>
    <fullName>OK_with_competitor_getting_market__c</fullName>
    <label>OK with competitor getting market?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>