force-app/main/default/objects/Requirement_Sheet__c/fields/Optimized_Website_Pages__c.field-meta.xml
<CustomField>
    <fullName>Optimized_Website_Pages__c</fullName>
    <inlineHelpText>Are the pages linking to the website and indexing in Google? Connected to GMB?</inlineHelpText>
    <label>Optimized Website Pages?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>