force-app/main/default/objects/Requirement_Sheet__c/fields/Overview_What_does_the_company_do__c.field-meta.xml
<CustomField>
    <fullName>Overview_What_does_the_company_do__c</fullName>
    <label>Overview - What does the company do?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>