force-app/main/default/objects/Requirement_Sheet__c/fields/Pitch_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Outcome__c</fullName>
    <label>Pitch Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>