force-app/main/default/objects/Requirement_Sheet__c/fields/Pitched_KDM__c.field-meta.xml
<CustomField>
    <fullName>Pitched_KDM__c</fullName>
    <label>Pitched KDM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>