force-app/main/default/objects/Requirement_Sheet__c/fields/Post_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Post_Frequency__c</fullName>
    <inlineHelpText>Posting 3x or more original posts per week across all channels.​</inlineHelpText>
    <label>Post Frequency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>