force-app/main/default/objects/Requirement_Sheet__c/fields/Predictable_Sales_Pipeline_Notes__c.field-meta.xml
<CustomField>
    <fullName>Predictable_Sales_Pipeline_Notes__c</fullName>
    <label>Predictable Sales Pipeline Notes</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>