force-app/main/default/objects/Requirement_Sheet__c/fields/Program_Size__c.field-meta.xml
<CustomField>
    <fullName>Program_Size__c</fullName>
    <label>Program Size</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>