force-app/main/default/objects/Requirement_Sheet__c/fields/Prospect_agreed_they_are_looking_to_grow__c.field-meta.xml
<CustomField>
    <fullName>Prospect_agreed_they_are_looking_to_grow__c</fullName>
    <label>Prospect agreed they are looking to grow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>