force-app/main/default/objects/Requirement_Sheet__c/fields/Prospect_needs_sales_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Prospect_needs_sales_pipeline__c</fullName>
    <label>Prospect needs sales pipeline?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>