force-app/main/default/objects/Requirement_Sheet__c/fields/Prospects_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Prospects_Expectations__c</fullName>
    <inlineHelpText># of Appointments or Sales per month</inlineHelpText>
    <label>Prospects Expectations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>