force-app/main/default/objects/Requirement_Sheet__c/fields/PSR_Active__c.field-meta.xml
<CustomField>
    <fullName>PSR_Active__c</fullName>
    <formula>PSR_Name__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR Active</label>
    <type>Checkbox</type>
</CustomField>