force-app/main/default/objects/Requirement_Sheet__c/fields/PSR_Name__c.field-meta.xml
<CustomField>
    <fullName>PSR_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSR Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requirement_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>