force-app/main/default/objects/Requirement_Sheet__c/fields/Qualified_Company__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Company__c</fullName>
    <label>Qualified Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>