force-app/main/default/objects/Requirement_Sheet__c/fields/Qualified_Company_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Company_Notes__c</fullName>
    <label>Qualified Company Notes</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>