force-app/main/default/objects/Requirement_Sheet__c/fields/Reason_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Approved__c</fullName>
    <label>Reason Not Approved</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>