force-app/main/default/objects/Requirement_Sheet__c/fields/Reason_not_moving_forward__c.field-meta.xml
<CustomField>
    <fullName>Reason_not_moving_forward__c</fullName>
    <label>Reason not moving forward?</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>