force-app/main/default/objects/Requirement_Sheet__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>