force-app/main/default/objects/Requirement_Sheet__c/fields/Research_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Research_Document_Link__c</fullName>
    <label>Research Document Link</label>
    <type>Url</type>
</CustomField>